# trading-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MORNING_REPORT.md  Makefile  README.md  TODO.md  docker-compose.yml  proposed_charter_edits.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
config/: playbook.example.yaml  portfolio.example.yaml  risk.yaml  universes.generated.yaml  universes.yaml  watchlist.yaml
docker/: healthcheck.py
docs/: COPILOT.md  DRILLS.md  GO_LIVE.md  HEDGEAGENTS_BACKLOG.md  Trading_Agent_Brochure.html  Trading_Agent_Brochure_PUBLIC.html  concept_multiagent_memory.md  deploy.md  incidents.md  research_agent.md  research_macro_leadlag.md  restore.md  rotation_cluster_analysis.md  system_map.md  winning_config.md
linkedin_drafts/: 2026-07-12.md
scripts/: add_rotation_lesson.py  benchmark_2020.py  benchmark_no_leverage.py  compare_strategies.py  compare_windows.py  find_best_strategy.py  guard_sweep.py  hypertune_no_leverage.py  leverage_test.py  provision_vps.sh  refresh_fundamentals.py  refresh_universes.py  rotation_cluster_analysis.py  tune_strategy.py
src/trading/: __init__.py  cli.py
src/trading/agents/: __init__.py  committee.py  context.py  guards.py  historian.py  llm.py  pm.py
src/trading/backtest/: __init__.py  costs.py  engine.py  guards_overlay.py  metrics.py  walkforward.py
src/trading/bot/: __init__.py  notifier.py  telegram.py
src/trading/copilot/: __init__.py  engine.py  facts.py  provider.py  store.py
src/trading/core/: clock.py  config.py  file_lock.py  logging.py  types.py  universes.py
src/trading/dashboard/: __init__.py  app.py  live.py  rotation.py
src/trading/data/: __init__.py  base.py  cache.py  ccxt_source.py  fundamentals_source.py  ibkr_source.py  yfinance_source.py
src/trading/execution/: __init__.py  base.py  ibkr.py  simulator.py  store.py
src/trading/memory/: __init__.py  store.py
src/trading/portfolio/: __init__.py  core_satellite.py
src/trading/regime/: __init__.py  base.py  hmm.py  hmm_macro.py  realized_vol.py  vix.py
src/trading/reporting/: __init__.py  daily.py  executive_summary.py  news.py  render.py
src/trading/risk/: __init__.py  limits.py  manager.py
tests/: test_cli_use_ibkr.py  test_healthcheck.py  test_smoke.py
tests/agents/: test_committee.py  test_guards.py  test_historian.py  test_pm.py
tests/backtest/: conftest.py  test_engine.py  test_guards_overlay.py  test_metrics.py  test_walkforward.py
tests/bot/: test_offset.py  test_telegram.py
tests/copilot/: test_copilot.py
tests/core/: test_file_lock.py
tests/dashboard/: test_dashboard.py  test_live.py  test_rotation.py
tests/data/: conftest.py  test_adapters.py  test_base.py  test_cache.py  test_fundamentals_source.py
tests/execution/: conftest.py  test_ibkr.py  test_ibkr_timeouts.py  test_simulator.py  test_store.py
tests/memory/: test_store.py
tests/portfolio/: test_core_satellite.py
tests/regime/: test_hmm.py  test_hmm_macro.py  test_modulate.py  test_realized_vol.py  test_vix.py
tests/reporting/: test_daily.py
tests/risk/: conftest.py  test_kill_switches.py  test_persistence_and_flatten.py  test_signal_to_orders.py
tests/runner/: test_alerts.py  test_cycle.py  test_heartbeat.py  test_holds.py  test_playbook.py  test_reconciliation.py  test_runner_internals.py  test_state.py
tests/runtime/: test_advisor.py  test_command_processor.py  test_commands.py  test_econ_watch.py  test_guards.py  test_hmm_advisor.py  test_live_mirror.py  test_macro_monitor.py  test_market_watch.py  test_mode.py  test_ops_watch.py  test_options_monitor.py  test_portfolio_stats.py  test_risk_monitor.py  test_sentinel.py  test_style_advisor.py
tests/selection/: test_combine.py  test_dip_buy_overlay.py  test_ewma_vol_target.py  test_hedge_overlay.py  test_mode_overlay.py  test_overlay.py  test_rank.py  test_regime_derisk.py  test_scores.py  test_screens.py
tests/strategies/: conftest.py  test_base.py  test_long_term_momentum.py  test_pairs.py  test_pairs_kalman.py  test_pca_residual.py  test_strategies.py  test_top_k_momentum.py
(+51 files in other folders)
