[project]
name = "trading-agent"
version = "0.1.0"
description = "Autonomous research + execution system for swing/position trading across US equities, FX, and crypto via Interactive Brokers."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Yan" }]

# Runtime dependencies. Pinned conservatively; uv.lock will resolve exact versions.
dependencies = [
    # --- Core scientific stack ---
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pyarrow>=15.0",            # Parquet I/O
    "numba>=0.59",              # JIT for hot loops in the backtester
    # --- Data sources ---
    "yfinance>=0.2.40",         # Daily equities (free)
    "ccxt>=4.3",                # Crypto exchanges (free)
    "ib-async>=1.0.3",          # IBKR async wrapper (successor to ib_insync)
    "pandas-market-calendars>=4.4",  # Trading calendars, sessions
    # --- Modeling ---
    "scikit-learn>=1.5",
    "statsmodels>=0.14",        # Cointegration, OLS, ARIMA
    "hmmlearn>=0.3.2",          # Hidden Markov regime models
    # --- App infrastructure ---
    "pydantic>=2.7",            # Typed configs and DTOs
    "pydantic-settings>=2.3",   # .env-driven settings
    "pyyaml>=6.0",              # Strategy / universe configs
    "python-dotenv>=1.0",
    "loguru>=0.7",              # Logging
    "typer>=0.12",              # CLI
    "rich>=13.7",               # Pretty tables / progress bars in CLI
    "tenacity>=8.3",            # Retry logic for broker/data calls
    "httpx>=0.27",              # Async HTTP for any REST data sources
    "lxml>=5.2",                # pandas.read_html parser (scripts/refresh_universes.py)
    "apscheduler>=3.10",        # Scheduled jobs for the live runner
    # --- Notifications ---
    "python-telegram-bot>=21",  # Optional alerts; lazy-imported
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs",
    "types-PyYAML",
]

[project.scripts]
# Single CLI entry, subcommands defined in src/trading/cli.py
trading = "trading.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

# -------------------- tooling --------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # flake8-bugbear
    "UP",               # pyupgrade
    "SIM",              # flake8-simplify
    "RUF",              # ruff-specific
    "N",                # pep8-naming
]
ignore = [
    "E501",     # line length — formatter handles it
    "B008",     # typer.Option() in argument defaults is the prescribed typer pattern
    "B017",     # pytest.raises(Exception) is fine when we're testing pydantic's varied validation errors
    "RUF001",   # ambiguous unicode in strings    — math notation (σ, γ, ε) is intentional
    "RUF002",   # ambiguous unicode in docstrings — math notation (σ, γ, ε) is intentional
]

[tool.ruff.lint.per-file-ignores]
# Tests can reach into private attrs / use Hungarian-cased names matching the
# vendor SDKs they're faking; that's the whole point of the fake.
"tests/**" = ["N802", "N803", "N806", "N815", "RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true  # many quant libs lack stubs

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: tests that hit network or take >1s",
    "live: tests that require a running IB Gateway / paper account",
]
